--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Nebraska Football — Complete Season History</title>
-  <link rel="preconnect" href="https://cdn.jsdelivr.net" />
+  <title>Nebraska Football — History Hub (Tier 2 Ready)</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
   <style>
     :root{
@@ -15,16 +14,15 @@
     html,body{height:100%}
     body{ margin:0; background:linear-gradient(180deg,#0b0d10,#0e1318); color:var(--text); font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; }
     header{ position:sticky; top:0; z-index:50; backdrop-filter: blur(6px); background:rgba(11,13,16,.75); border-bottom:1px solid #12171f; }
-    .bar{ max-width:1200px; margin:0 auto; padding:14px 16px; display:flex; gap:12px; align-items:center; }
+    .bar{ max-width:1200px; margin:0 auto; padding:14px 16px; display:flex; gap:12px; align-items:center; flex-wrap:wrap}
     .logo{display:flex; align-items:center; gap:10px; font-weight:800; letter-spacing:.4px}
     .logo-badge{ width:34px; height:34px; border-radius:8px; display:grid; place-items:center; background:radial-gradient(90px 50px at -10% 120%,#ff2d2d,#d00000 60%,#880000); box-shadow: 0 6px 20px rgba(208,0,0,.45), inset 0 0 0 1px rgba(255,255,255,.09); font-weight:900; }
     .pill{ display:inline-flex; align-items:center; gap:8px; padding:8px 10px; border-radius:12px; background:var(--chip); color:var(--muted); font-size:13px; border:1px solid var(--ring); }
-    .search{flex:1; position:relative;}
-    .search input{ width:100%; background:var(--panel); border:1px solid var(--ring); color:var(--text); padding:10px 12px 10px 36px; border-radius:12px; outline:none; caret-color:var(--accent); }
-    .search svg{position:absolute; left:10px; top:50%; transform:translateY(-50%); opacity:.6}
-    .kpis{display:flex; gap:8px; flex-wrap:wrap}
-    .kpis .pill strong{color:#fff; font-weight:700}
-    .layout{max-width:1200px; margin:16px auto; display:grid; grid-template-columns: 320px 1fr; gap:16px; padding:0 16px 24px}
+    .controls{display:flex; gap:8px; align-items:center; flex-wrap:wrap}
+    select, input[type="number"]{ background:var(--panel); border:1px solid var(--ring); color:var(--text); padding:8px 10px; border-radius:10px; }
+    .btn{ background:linear-gradient(180deg,#ff6868,#d00000); color:#fff; border:none; border-radius:10px; padding:10px 12px; cursor:pointer; font-weight:700; box-shadow:0 8px 26px rgba(208,0,0,.35); }
+    .btn.secondary{background:#1e2630; border:1px solid var(--ring); box-shadow:none; color:#d8e1ee}
+    .layout{max-width:1200px; margin:16px auto; display:grid; grid-template-columns: 330px 1fr; gap:16px; padding:0 16px 24px}
     aside{ background:var(--panel); border:1px solid var(--ring); border-radius:16px; overflow:hidden; }
     .aside-head{padding:12px 14px; display:flex; gap:8px; align-items:center; justify-content:space-between; border-bottom:1px solid var(--ring); background:var(--panel-2)}
     .aside-body{max-height:70vh; overflow:auto}
@@ -46,8 +44,8 @@
     tbody tr:hover{background:#121a21}
     .chip{display:inline-block; padding:3px 8px; border-radius:10px; background:#1e2630; border:1px solid var(--ring); color:#a9b3c2; font-size:12px}
     .home{color:#9dd5ff} .away{color:#ffc899} .bowl{color:#ffd36b}
-    .btn{ background:linear-gradient(180deg,#ff6868,#d00000); color:#fff; border:none; border-radius:10px; padding:10px 12px; cursor:pointer; font-weight:700; box-shadow:0 8px 26px rgba(208,0,0,.35); }
-    .btn.secondary{background:#1e2630; border:1px solid var(--ring); box-shadow:none; color:#d8e1ee}
+    .progress{height:10px; background:#0e141a; border-radius:999px; overflow:hidden; border:1px solid var(--ring); width:220px}
+    .barfill{height:100%; background:linear-gradient(90deg,#ff7b7b,#d00000); width:0%}
     footer{max-width:1200px;margin:18px auto 40px; color:#a9b3c2; font-size:12px; text-align:center}
     .muted{color:#a9b3c2}
     @media (max-width:1000px){.layout{grid-template-columns:1fr}}
@@ -60,30 +58,39 @@
         <div class="logo-badge">N</div>
         <div>Nebraska Football — History Hub</div>
       </div>
-      <div class="pill" id="apiStatus"><span class="spinner" style="width:14px;height:14px;border:2px solid #2a3441;border-top-color:#fff;border-radius:50%;display:none;animation:spin 1s linear infinite"></span><span id="apiStatusText">API: not connected</span></div>
-      <div class="search">
-        <input id="search" type="search" placeholder="Search opponent, bowl, or venue…" />
-        <svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M21 21l-4.2-4.2M10.5 18a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15Z" stroke="currentColor" stroke-width="2"/></svg>
+
+      <div class="pill" id="apiStatus"><span id="apiStatusText">API: not connected</span></div>
+
+      <div class="controls">
+        <select id="preloadRange" title="Choose how much history to load">
+          <option value="last10">Load: Last 10 seasons</option>
+          <option value="last25" selected>Load: Last 25 seasons</option>
+          <option value="since1960">Load: Since 1960</option>
+          <option value="all">Load: All seasons</option>
+        </select>
+        <label class="pill">Concurrency
+          <input id="concurrency" type="number" min="1" max="8" value="4" style="width:64px;margin-left:6px">
+        </label>
+        <div class="progress"><div class="barfill" id="barfill"></div></div>
+        <div class="pill">Loaded: <strong id="loadedCount">0</strong>/<span id="totalToLoad">0</span></div>
+        <button class="btn" id="preloadBtn">Preload</button>
+        <button class="btn secondary" id="clearCacheBtn" title="Clear cached seasons">Clear Cache</button>
+        <button class="btn secondary" id="changeKeyBtn" title="Change API Key">API Key</button>
       </div>
-      <div class="kpis">
-        <div class="pill">Games Shown: <strong id="kGames">—</strong></div>
-        <div class="pill">Season: <strong id="kSeason">—</strong></div>
-      </div>
-      <button class="btn secondary" id="changeKeyBtn" title="Change API Key">API Key</button>
     </div>
   </header>
 
   <div class="layout">
     <aside>
       <div class="aside-head">
-        <div><strong>Seasons</strong> <span class="muted">1900–present</span></div>
+        <div><strong>Seasons</strong> <span class="muted">1890–present</span></div>
         <div class="pill" id="leftMsg">Idle</div>
       </div>
       <div class="aside-body">
         <ul class="season-list" id="seasonList"></ul>
       </div>
       <div class="muted" style="padding:12px;border-top:1px solid var(--ring)">
-        Tip: use <kbd>↑</kbd>/<kbd>↓</kbd> to jump seasons. Data loads on-click to respect API limits.
+        Tip: Click any season to load on demand. Preloading uses a smart queue with retries.
       </div>
     </aside>
 
@@ -123,63 +130,119 @@
   </div>
 
   <footer>
-    Uses CollegeFootballData API v2. Your key stays in your browser.
+    Optimized for CFBD Tier 2: request queue, retries, and IndexedDB caching. Your key stays in your browser.
   </footer>
 
   <script>
+    // ------------- Utilities -------------
     const $ = s => document.querySelector(s);
     const el = (t,c,txt)=>{const e=document.createElement(t); if(c) e.className=c; if(txt) e.textContent=txt; return e;};
+    const wait = ms => new Promise(r=>setTimeout(r,ms));
+    function jitter(ms){ return ms + Math.floor(Math.random()*ms*0.25); }
 
+    // ------------- IndexedDB tiny helper -------------
+    const DB_NAME = "cfbdCache"; const STORE = "seasons";
+    function idbOpen(){
+      return new Promise((resolve,reject)=>{
+        const req = indexedDB.open(DB_NAME,1);
+        req.onupgradeneeded = (e)=>{ e.target.result.createObjectStore(STORE); };
+        req.onerror = ()=> reject(req.error);
+        req.onsuccess = ()=> resolve(req.result);
+      });
+    }
+    async function idbGet(key){
+      const db = await idbOpen(); return new Promise((resolve,reject)=>{
+        const tx = db.transaction(STORE,"readonly"); const st = tx.objectStore(STORE);
+        const req = st.get(key);
+        req.onsuccess = ()=> resolve(req.result || null);
+        req.onerror = ()=> reject(req.error);
+      });
+    }
+    async function idbSet(key, val){
+      const db = await idbOpen(); return new Promise((resolve,reject)=>{
+        const tx = db.transaction(STORE,"readwrite"); const st = tx.objectStore(STORE);
+        const req = st.put(val, key);
+        req.onsuccess = ()=> resolve(true);
+        req.onerror = ()=> reject(req.error);
+      });
+    }
+    async function idbClear(){
+      const db = await idbOpen(); return new Promise((resolve,reject)=>{
+        const tx = db.transaction(STORE,"readwrite"); const st = tx.objectStore(STORE);
+        const req = st.clear();
+        req.onsuccess = ()=> resolve(true);
+        req.onerror = ()=> reject(req.error);
+      });
+    }
+
+    // ------------- API -------------
     const CFBD = {
       base: "https://api.collegefootballdata.com",
-      async get(path, params={}){
+      async get(path, params={}, attempt=0){
         const key = localStorage.getItem("cfbd_key");
         if(!key) throw new Error("Missing CFBD API key");
         const url = new URL(this.base + path);
         Object.entries(params).forEach(([k,v])=> v!=null && url.searchParams.set(k,v));
         const res = await fetch(url, { headers: { "Authorization": "Bearer " + key }});
-        if(res.status === 429){ throw new Error("Rate limited (429). Try again in a minute."); }
-        if(!res.ok){ const txt = await res.text(); throw new Error(`CFBD ${res.status}: ${txt}`); }
+        if(res.status === 429 || res.status >= 500){
+          if(attempt < 5){
+            const backoff = jitter(400 * Math.pow(2, attempt));
+            $("#apiStatusText").textContent = `Retrying ${attempt+1}/5 in ${Math.ceil(backoff/1000)}s…`;
+            await wait(backoff);
+            return this.get(path, params, attempt+1);
+          }
+          const txt = await res.text();
+          throw new Error(`CFBD ${res.status}: ${txt}`);
+        }
+        if(!res.ok){
+          const txt = await res.text();
+          throw new Error(`CFBD ${res.status}: ${txt}`);
+        }
         return res.json();
       }
     };
 
+    // ------------- State -------------
     const state = {
-      startYear: 1900,
+      startYear: 1890,
       endYear: new Date().getFullYear(),
-      cache: new Map(), // year -> games[]
-      summaries: new Map(),
-      selectedSeason: null
+      cache: new Map(),    // memory cache year -> games[]
+      selected: null,
+      loading: false
     };
 
-    function setApiStatus(msg, loading=false){
-      $("#apiStatusText").textContent = msg;
-      $("#apiStatus .spinner").style.display = loading ? "inline-block" : "none";
-    }
+    function setApiStatus(msg){ $("#apiStatusText").textContent = msg; }
     function setLeft(msg){ $("#leftMsg").textContent = msg; }
 
-    document.addEventListener("keydown", (e)=>{
-      const list = $("#seasonList");
-      if(!list) return;
-      const active = list.querySelector(".active");
-      if(e.key === "ArrowDown"){
-        const n = active?.nextElementSibling; if(n){ n.click(); n.scrollIntoView({block:"nearest"}); }
-      } else if(e.key === "ArrowUp"){
-        const p = active?.previousElementSibling; if(p){ p.click(); p.scrollIntoView({block:"nearest"}); }
-      } else if(e.key === "/"){
-        e.preventDefault(); $("#search")?.focus();
-      }
-    });
-
     $("#changeKeyBtn").addEventListener("click", ()=>{
-      const val = prompt("Paste your CollegeFootballData API key (stored locally):", localStorage.getItem("cfbd_key") || "");
-      if(val){ localStorage.setItem("cfbd_key", val.trim()); setApiStatus("Key saved. Pick a season."); }
+      const v = prompt("Paste your CollegeFootballData API key (stored locally):", localStorage.getItem("cfbd_key") || "");
+      if(v){ localStorage.setItem("cfbd_key", v.trim()); setApiStatus("Key saved."); }
+    });
+    $("#clearCacheBtn").addEventListener("click", async ()=>{
+      await idbClear(); state.cache.clear(); setApiStatus("Cache cleared"); alert("Local cache cleared.");
     });
 
+    // ------------- Request Queue -------------
+    class Queue{
+      constructor(max=4){ this.max=max; this.running=0; this.q=[]; }
+      push(fn){ return new Promise((resolve,reject)=>{ this.q.push({fn,resolve,reject}); this.run(); }); }
+      run(){
+        while(this.running < this.max && this.q.length){
+          const {fn,resolve,reject} = this.q.shift();
+          this.running++;
+          fn().then(resolve).catch(reject).finally(()=>{ this.running--; this.run(); });
+        }
+      }
+    }
+
+    const queue = new Queue(parseInt($("#concurrency").value,10)||4);
+    $("#concurrency").addEventListener("change", e=>{ queue.max = Math.max(1, Math.min(8, parseInt(e.target.value,10)||4)); });
+
+    // ------------- Seasons UI -------------
     function buildSeasonList(){
-      const ul = $("#seasonList"); ul.innerHTML = "";
+      const ul = $("#seasonList"); ul.innerHTML="";
       for(let y=state.endYear; y>=state.startYear; y--){
-        const li = el("li","", ""); 
+        const li = el("li");
         const left = el("div","", y.toString());
         const right = el("small","muted","");
         li.append(left,right);
@@ -188,38 +251,47 @@
       }
     }
 
+    async function loadSeason(year){
+      // memory cache
+      if(state.cache.has(year)) return state.cache.get(year);
+      // idb cache
+      const idbKey = `games-${year}`; 
+      const cached = await idbGet(idbKey);
+      if(cached){
+        const parsed = JSON.parse(cached);
+        state.cache.set(year, parsed);
+        return parsed;
+      }
+      // fetch
+      const [reg, post] = await Promise.all([
+        CFBD.get("/games", { year, seasonType: "regular", team: "Nebraska" }),
+        CFBD.get("/games", { year, seasonType: "postseason", team: "Nebraska" })
+      ]);
+      const games = [...reg, ...post].sort((a,b)=> new Date(a.start_date) - new Date(b.start_date));
+      state.cache.set(year, games);
+      await idbSet(idbKey, JSON.stringify(games));
+      return games;
+    }
+
     async function selectSeason(year, li, rightEl){
-      $("#kSeason").textContent = year;
       const ul = $("#seasonList"); [...ul.children].forEach(n=>n.classList.remove("active")); li.classList.add("active");
-      $("#seasonTitle").textContent = `Season ${year}`;
-      setLeft("Loading season…"); setApiStatus("Fetching…", true);
+      $("#seasonTitle").textContent = `Season ${year}`; $("#seasonMeta").textContent = "…";
+      setLeft("Loading season…"); setApiStatus("Loading…");
       try{
-        let games = state.cache.get(year);
-        if(!games){
-          // v2 uses same path; keep params as before (seasonType regular/postseason)
-          const [reg, post] = await Promise.all([
-            CFBD.get("/games", { year, seasonType: "regular", team: "Nebraska" }),
-            CFBD.get("/games", { year, seasonType: "postseason", team: "Nebraska" })
-          ]);
-          games = [...reg, ...post].sort((a,b)=> new Date(a.start_date) - new Date(b.start_date));
-          state.cache.set(year, games);
-        }
+        const games = await loadSeason(year);
         renderSeason(year, games);
         rightEl.textContent = `${$("#w").textContent}-${$("#l").textContent}${($("#t").textContent!=="0")?'-'+$("#t").textContent:''}`;
         setLeft("Ready"); setApiStatus("Ready");
+        state.selected = year;
       }catch(err){
         console.error(err);
-        setApiStatus(err.message || "Error");
         $("#gamesBody").innerHTML = `<tr><td colspan="9" class="muted" style="padding:18px">${err.message || "Failed to load season."}</td></tr>`;
-        $("#w").textContent = "0"; $("#l").textContent = "0"; $("#t").textContent = "0"; $("#conf").textContent = "—";
-        setLeft("Error");
-      }finally{
-        setApiStatus("Ready");
+        setLeft("Error"); setApiStatus("Error");
       }
     }
 
     function renderSeason(year, games){
-      const body = $("#gamesBody"); body.innerHTML = "";
+      const body = $("#gamesBody"); body.innerHTML="";
       let w=0,l=0,t=0; const confSet = new Set();
       for(const g of games){
         const isHome = g.home_team === "Nebraska";
@@ -233,9 +305,7 @@
         const score = scoreKnown ? `${isHome?g.home_points:g.away_points}–${isHome?g.away_points:g.home_points}` : "—";
         const result = scoreKnown ? ((isHome?g.home_points:g.away_points) > (isHome?g.away_points:g.home_points) ? "W":"L") : "—";
         if(result==="W") w++; else if(result==="L") l++; else t++;
-
         const conf = isHome ? g.home_conference : g.away_conference; if(conf) confSet.add(conf);
-
         const tr = document.createElement("tr");
         tr.innerHTML = `
           <td>${week}</td>
@@ -252,17 +322,48 @@
       }
       $("#w").textContent = w; $("#l").textContent = l; $("#t").textContent = t; $("#conf").textContent = confSet.size? Array.from(confSet).join(", "):"—";
       $("#seasonMeta").textContent = `${games.length} game${games.length===1?"":"s"}`;
-      $("#kGames").textContent = games.length;
     }
 
-    // boot
+    // ------------- Preload flow -------------
+    $("#preloadBtn").addEventListener("click", ()=> startPreload());
+    async function startPreload(){
+      const range = $("#preloadRange").value;
+      const years = [];
+      const end = state.endYear;
+      let start = end - 24;
+      if(range==="last10"){ start = end - 9; }
+      else if(range==="last25"){ start = end - 24; }
+      else if(range==="since1960"){ start = 1960; }
+      else if(range==="all"){ start = state.startYear; }
+
+      for(let y=end; y>=start; y--) years.push(y);
+      $("#totalToLoad").textContent = years.length.toString();
+      let done=0;
+      setApiStatus("Preloading…"); setLeft("Queueing…");
+
+      await Promise.all(years.map(year => queue.push(async ()=>{
+        try{
+          await loadSeason(year);
+        }finally{
+          done++; $("#loadedCount").textContent = String(done);
+          const pct = Math.round(done/years.length*100); $("#barfill").style.width = pct + "%";
+        }
+      })));
+
+      setApiStatus("Preload complete"); setLeft("Ready");
+      // auto-select the most recent year
+      const list = $("#seasonList"); const first = list.querySelector("li"); if(first) first.click();
+    }
+
+    // ------------- Init -------------
     (function init(){
-      if(localStorage.getItem("cfbd_key")) setApiStatus("Key found. Click any season.");
+      if(localStorage.getItem("cfbd_key")) setApiStatus("Key found");
       else {
-        const key = prompt("Enter your free CollegeFootballData API key:");
-        if(key){ localStorage.setItem("cfbd_key", key.trim()); setApiStatus("Key saved. Click any season."); }
+        const key = prompt("Enter your CollegeFootballData API key (Tier 2):");
+        if(key){ localStorage.setItem("cfbd_key", key.trim()); setApiStatus("Key saved"); }
       }
       buildSeasonList();
+      setLeft("Idle");
     })();
   </script>
 </body>
