--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Nebraska Football — History Hub (Tier 2 Ready)</title>
+  <title>Nebraska Football — History Hub (CFBD v2 Fixed)</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
   <style>
     :root{
@@ -130,7 +130,7 @@
   </div>
 
   <footer>
-    Optimized for CFBD Tier 2: request queue, retries, and IndexedDB caching. Your key stays in your browser.
+    Optimized for CFBD v2: camelCase field names, queue + retries, IndexedDB caching.
   </footer>
 
   <script>
@@ -207,8 +207,7 @@
       startYear: 1890,
       endYear: new Date().getFullYear(),
       cache: new Map(),    // memory cache year -> games[]
-      selected: null,
-      loading: false
+      selected: null
     };
 
     function setApiStatus(msg){ $("#apiStatusText").textContent = msg; }
@@ -222,7 +221,7 @@
       await idbClear(); state.cache.clear(); setApiStatus("Cache cleared"); alert("Local cache cleared.");
     });
 
-    // ------------- Request Queue -------------
+    // ------------- Request Queue (for future preloading UI if desired) -------------
     class Queue{
       constructor(max=4){ this.max=max; this.running=0; this.q=[]; }
       push(fn){ return new Promise((resolve,reject)=>{ this.q.push({fn,resolve,reject}); this.run(); }); }
@@ -234,9 +233,7 @@
         }
       }
     }
-
-    const queue = new Queue(parseInt($("#concurrency").value,10)||4);
-    $("#concurrency").addEventListener("change", e=>{ queue.max = Math.max(1, Math.min(8, parseInt(e.target.value,10)||4)); });
+    const queue = new Queue(4);
 
     // ------------- Seasons UI -------------
     function buildSeasonList(){
@@ -249,25 +246,24 @@
         li.addEventListener("click", ()=> selectSeason(y, li, right));
         ul.appendChild(li);
       }
+      // auto-select most recent season
+      const first = ul.querySelector("li"); if(first) first.click();
     }
 
     async function loadSeason(year){
-      // memory cache
       if(state.cache.has(year)) return state.cache.get(year);
-      // idb cache
-      const idbKey = `games-${year}`; 
+      const idbKey = `games-${year}`;
       const cached = await idbGet(idbKey);
       if(cached){
         const parsed = JSON.parse(cached);
         state.cache.set(year, parsed);
         return parsed;
       }
-      // fetch
       const [reg, post] = await Promise.all([
         CFBD.get("/games", { year, seasonType: "regular", team: "Nebraska" }),
         CFBD.get("/games", { year, seasonType: "postseason", team: "Nebraska" })
       ]);
-      const games = [...reg, ...post].sort((a,b)=> new Date(a.start_date) - new Date(b.start_date));
+      const games = [...reg, ...post].sort((a,b)=> new Date(a.startDate) - new Date(b.startDate));
       state.cache.set(year, games);
       await idbSet(idbKey, JSON.stringify(games));
       return games;
@@ -294,29 +290,30 @@
       const body = $("#gamesBody"); body.innerHTML="";
       let w=0,l=0,t=0; const confSet = new Set();
       for(const g of games){
-        const isHome = g.home_team === "Nebraska";
-        const opp = isHome ? g.away_team : g.home_team;
-        const oppConf = isHome ? g.away_conference : g.home_conference;
-        const ha = isHome ? "Home" : (g.neutral_site ? "Neutral" : "Away");
-        const type = g.season_type === "postseason" ? (g.notes || "Bowl") : "Regular";
-        const date = g.start_date ? new Date(g.start_date) : null;
+        // CFBD v2 camelCase fields
+        const isHome = g.homeTeam === "Nebraska";
+        const opp = isHome ? g.awayTeam : g.homeTeam;
+        const oppConf = isHome ? g.awayConference : g.homeConference;
+        const ha = isHome ? "Home" : (g.neutralSite ? "Neutral" : "Away");
+        const type = g.seasonType === "postseason" ? (g.notes || "Bowl") : "Regular";
+        const date = g.startDate ? new Date(g.startDate) : null;
         const week = g.week ?? "";
-        const scoreKnown = (g.home_points!=null && g.away_points!=null);
-        const score = scoreKnown ? `${isHome?g.home_points:g.away_points}–${isHome?g.away_points:g.home_points}` : "—";
-        const result = scoreKnown ? ((isHome?g.home_points:g.away_points) > (isHome?g.away_points:g.home_points) ? "W":"L") : "—";
+        const scoreKnown = (g.homePoints!=null && g.awayPoints!=null);
+        const score = scoreKnown ? `${isHome?g.homePoints:g.awayPoints}–${isHome?g.awayPoints:g.homePoints}` : "—";
+        const result = scoreKnown ? ((isHome?g.homePoints:g.awayPoints) > (isHome?g.awayPoints:g.homePoints) ? "W":"L") : "—";
         if(result==="W") w++; else if(result==="L") l++; else t++;
-        const conf = isHome ? g.home_conference : g.away_conference; if(conf) confSet.add(conf);
+        const conf = isHome ? g.homeConference : g.awayConference; if(conf) confSet.add(conf);
         const tr = document.createElement("tr");
         tr.innerHTML = `
           <td>${week}</td>
           <td>${date? date.toLocaleDateString():""}</td>
           <td>${opp} ${oppConf?`<span class="chip">${oppConf}</span>`:""}</td>
           <td class="${isHome?'home':'away'}">${ha}</td>
-          <td>${isHome ? (g.home_conference||"") : (g.away_conference||"")}</td>
+          <td>${isHome ? (g.homeConference||"") : (g.awayConference||"")}</td>
           <td><strong>${score}</strong></td>
           <td class="${result==='W'?'w':'l'}">${result}</td>
           <td>${g.venue||""}</td>
-          <td class="${g.season_type==='postseason'?'bowl':''}">${type}</td>
+          <td class="${g.seasonType==='postseason'?'bowl':''}">${type}</td>
         `;
         body.appendChild(tr);
       }
@@ -324,42 +321,10 @@
       $("#seasonMeta").textContent = `${games.length} game${games.length===1?"":"s"}`;
     }
 
-    // ------------- Preload flow -------------
-    $("#preloadBtn").addEventListener("click", ()=> startPreload());
-    async function startPreload(){
-      const range = $("#preloadRange").value;
-      const years = [];
-      const end = state.endYear;
-      let start = end - 24;
-      if(range==="last10"){ start = end - 9; }
-      else if(range==="last25"){ start = end - 24; }
-      else if(range==="since1960"){ start = 1960; }
-      else if(range==="all"){ start = state.startYear; }
-
-      for(let y=end; y>=start; y--) years.push(y);
-      $("#totalToLoad").textContent = years.length.toString();
-      let done=0;
-      setApiStatus("Preloading…"); setLeft("Queueing…");
-
-      await Promise.all(years.map(year => queue.push(async ()=>{
-        try{
-          await loadSeason(year);
-        }finally{
-          done++; $("#loadedCount").textContent = String(done);
-          const pct = Math.round(done/years.length*100); $("#barfill").style.width = pct + "%";
-        }
-      })));
-
-      setApiStatus("Preload complete"); setLeft("Ready");
-      // auto-select the most recent year
-      const list = $("#seasonList"); const first = list.querySelector("li"); if(first) first.click();
-    }
-
-    // ------------- Init -------------
     (function init(){
       if(localStorage.getItem("cfbd_key")) setApiStatus("Key found");
       else {
-        const key = prompt("Enter your CollegeFootballData API key (Tier 2):");
+        const key = prompt("Enter your CollegeFootballData API key:");
         if(key){ localStorage.setItem("cfbd_key", key.trim()); setApiStatus("Key saved"); }
       }
       buildSeasonList();
